fix(components): [el-menu] collapse=true icon width

--- a/packages/theme-chalk/src/menu.scss
+++ b/packages/theme-chalk/src/menu.scss
@@ -153,7 +153,7 @@
       [class^='#{$namespace}-icon'] {
         margin: 0;
         vertical-align: middle;
-        width: 18px;
+        width: 24px;
         text-align: center;
       }
 
